--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 ---
 layout: default
-title: My Notes
+title: Presentacion
 ---
 <div id="home">
-  <h1>Notes <a style="font-size:smaller;" href="/categories.html">(sorted by Categories)</a></h1>
+  <h1>Presentacion <a style="font-size:smaller;" href="/categories.html">(sorted by Categories)</a></h1>
   <ul class="posts">
     {% for post in site.posts %}
     <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a>
